Bug 25002 - Regression: audio not detected "cannot build controls"
Summary: Regression: audio not detected "cannot build controls"
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: Sound(ALSA) (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Jaroslav Kysela
URL:
Keywords:
Depends on:
Blocks: 21782
  Show dependency tree
 
Reported: 2010-12-16 20:38 UTC by Maciej Rutecki
Modified: 2010-12-19 12:03 UTC (History)
6 users (show)

See Also:
Kernel Version: 2.6.37-rc
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
alsa-info (2.6.36, working) (22.62 KB, text/plain)
2010-12-17 11:41 UTC, Adam Williamson
Details
alsa-info (2.6.37rc5, broken) (18.07 KB, text/plain)
2010-12-17 11:45 UTC, Adam Williamson
Details
Fix patch (1.06 KB, patch)
2010-12-17 12:06 UTC, Takashi Iwai
Details | Diff

Description Maciej Rutecki 2010-12-16 20:38:51 UTC
Subject    : Regression: audio not detected "cannot build controls"
Submitter  : Jesse Barnes <jbarnes@virtuousgeek.org>
Date       : 2010-12-14 19:54
Message-ID : 20101214115449.6e569c86@jbarnes-desktop
References : http://marc.info/?l=linux-kernel&m=129235650912313&w=2

This entry is being used for tracking a regression from 2.6.36. Please don't
close it until the problem is fixed in the mainline.
Comment 1 Adam Williamson 2010-12-17 11:40:22 UTC
I'm hitting a regression in hda-intel from 2.6.36 and 2.6.37 and Takashi asked me to update this bug. System is a 2010 Sony Vaio Z.

2.6.36 alsa-info, 2.6.37 alsa-info will be attached shortly.

Relevant /var/log/messages stuff from 2.6.36:

[ 68.440427] HDA Intel 0000:01:00.1: PCI INT A disabled
[ 68.441091] HDA Intel 0000:00:1b.0: PCI INT A disabled
[ 71.586355] HDA Intel 0000:00:1b.0: PCI INT A -> GSI 16 (level, low) -> IRQ 16
[ 71.586488] HDA Intel 0000:00:1b.0: irq 43 for MSI/MSI-X
[ 71.586513] HDA Intel 0000:00:1b.0: setting latency timer to 64
[ 71.608670] hda_codec: ALC889: SKU not ready 0x411111f0
[ 71.608772] hda_codec: ALC889: BIOS auto-probing.
[ 71.608778] ALSA sound/pci/hda/hda_codec.c:4617: autoconfig: line_outs=1 (0x14/0x0/0x0/0x0/0x0)
[ 71.608782] ALSA sound/pci/hda/hda_codec.c:4621: speaker_outs=0 (0x0/0x0/0x0/0x0/0x0)
[ 71.608790] ALSA sound/pci/hda/hda_codec.c:4625: hp_outs=1 (0x15/0x0/0x0/0x0/0x0)
[ 71.608794] ALSA sound/pci/hda/hda_codec.c:4626: mono: mono_out=0x0
[ 71.608797] ALSA sound/pci/hda/hda_codec.c:4637: inputs: mic=0x18, fmic=0x12, line=0x0, fline=0x0, cd=0x0, aux=0x0
[ 71.610417] ALSA sound/pci/hda/patch_realtek.c:1405: realtek: No valid SSID, checking pincfg 0x411111f0 for NID 0x1d
[ 71.610422] ALSA sound/pci/hda/patch_realtek.c:1489: realtek: Enable default setup for auto mode as fallback
[ 72.615561] HDA Intel 0000:01:00.1: PCI INT A -> GSI 16 (level, low) -> IRQ 16
[ 72.615565] hda_intel: Disable MSI for Nvidia chipset
[ 72.615633] HDA Intel 0000:01:00.1: setting latency timer to 64

and from 2.6.37:

[ 104.987413] HDA Intel 0000:00:1b.0: PCI INT A disabled
[ 109.590443] HDA Intel 0000:00:1b.0: PCI INT A -> GSI 16 (level, low) -> IRQ 16
[ 109.591381] HDA Intel 0000:00:1b.0: irq 44 for MSI/MSI-X
[ 109.591421] HDA Intel 0000:00:1b.0: setting latency timer to 64
[ 109.606476] hda_codec: ALC889: BIOS auto-probing.
[ 109.606482] hda_codec: ALC889: SKU not ready 0x411111f0
[ 109.606490] ALSA sound/pci/hda/hda_codec.c:4619: autoconfig: line_outs=1 (0x14/0x0/0x0/0x0/0x0)
[ 109.606497] ALSA sound/pci/hda/hda_codec.c:4623: speaker_outs=0 (0x0/0x0/0x0/0x0/0x0)
[ 109.606503] ALSA sound/pci/hda/hda_codec.c:4627: hp_outs=1 (0x15/0x0/0x0/0x0/0x0)
[ 109.606510] ALSA sound/pci/hda/hda_codec.c:4628: mono: mono_out=0x0
[ 109.606533] ALSA sound/pci/hda/hda_codec.c:4632: inputs:
[ 109.606539] ALSA sound/pci/hda/hda_codec.c:4638:
[ 109.608198] ALSA sound/pci/hda/patch_realtek.c:1581: realtek: No valid SSID, checking pincfg 0x411111f0 for NID 0x1d
[ 109.608204] ALSA sound/pci/hda/patch_realtek.c:1665: realtek: Enable default setup for auto mode as fallback
[ 109.617188] ALSA sound/core/control.c:345: control 2:0:0:Mic Boost:0 is already present
[ 109.617194] hda_codec: cannot build controls for #0 (error -16)
[ 109.618220] input: HDA Intel Headphone as /devices/pci0000:00/0000:00:1b.0/sound/card0/input10

With 2.6.37, I get no usable device at all, PA shows only 'Dummy Output' as available.
Comment 2 Adam Williamson 2010-12-17 11:41:18 UTC
Created attachment 40562 [details]
alsa-info (2.6.36, working)
Comment 3 Adam Williamson 2010-12-17 11:45:26 UTC
Created attachment 40582 [details]
alsa-info (2.6.37rc5, broken)
Comment 4 Takashi Iwai 2010-12-17 12:06:15 UTC
Could you try the patch below?
Comment 5 Takashi Iwai 2010-12-17 12:06:45 UTC
Created attachment 40592 [details]
Fix patch
Comment 6 Adam Williamson 2010-12-17 12:38:04 UTC
sure, gimme a half hour or so.
Comment 7 Rafael J. Wysocki 2010-12-17 13:14:21 UTC
Handled-By : Takashi Iwai <tiwai@suse.de>
Comment 8 Adam Williamson 2010-12-17 13:54:34 UTC
indeed, that patch works, for my case at least. I guess Jesse's is the same - he doesn't provide enough info to be sure, but I know he has one system which is the same as mine, as he acquired a Vaio Z to work on graphics issues.

With the patch, sound devices show up, PA is happy (showing the HDA device and also the HDMI audio device), and sound works, as in 2.6.36.
Comment 9 Adam Williamson 2010-12-17 14:02:41 UTC
actually it's an improvement, the HDMI device doesn't show up in 2.6.36.
Comment 10 Takashi Iwai 2010-12-17 14:59:13 UTC
Thanks for testing.  I merged the patch now to sound git tree, and will send a pull request later.
Comment 11 Florian Mickler 2010-12-17 15:36:49 UTC
Patch: https://bugzilla.kernel.org/attachment.cgi?id=40592
Comment 12 Jesse Barnes 2010-12-17 17:29:03 UTC
Excellent, thanks.  I'll try the patch too (sorry I haven't been able to provide the other info you asked for yet, it's been a busy week).
Comment 13 Jesse Barnes 2010-12-17 18:34:43 UTC
yep, that patch works for me too, thanks Takashi.

Tested-by: Jesse Barnes <jbarnes@virtuousgeek.org>
Comment 14 Rafael J. Wysocki 2010-12-19 12:03:24 UTC
Fixed by 53e8c32 ALSA: hda - Fix conflict of Mic Boot controls .

Note You need to log in before you can comment on or make changes to this bug.